tds adding get instance to constructor, adding network debug to geoUTIL, homeUI fixes